atualizando geracao de struct e rest